# c_cmake_study

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/sum/: sum.c  sum.h
src/index/: main.c  main.h
tests/: CMakeLists.txt  test.c
